# desafIOAPI

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_PROCESS.md
.github/: dependabot.yml
.github/workflows/: changelog.yml  readme.yml  release.yml  rust.yml
scripts/: prepare_changelog.py  release.sh  release_notes.py
src/: archives.rs  cache.rs  error.rs  lib.rs  main.rs  meta.rs  progress_bar.rs  test.rs  utils.rs
test_fixtures/utf-8_sample/: utf-8_sample.txt
tests/: cli.rs
