[package]
name = "cached-path"
version = "0.6.1"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
keywords = ["http", "caching"]
categories = ["caching"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/epwalsh/rust-cached-path"
homepage = "https://github.com/ep