[package]
name = "cached-path"
version = "0.6.1"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
keywords = ["http", "caching"]
categories = ["caching"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/epwalsh/rust-cached-path"
homepage = "https://github.com/epwalsh/rust-cached-path"
description = "Download and cache HTTP resources."

[lib]
name = "cached_path"
path = "src/lib.rs"

[[bin]]
name = "cached-path"
path = "src/main.rs"
doc = false
required-features = ["build-binary"]

[dependencies]
fs2 = "0.4"
reqwest = { version = "0.11.0", default-features = false, features = [
    "blocking",
] }
sha2 = "0.10"
tempfile = "3.1"
log = 